add style for bookmark page

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4312,6 +4312,10 @@ body.node-type-course .messages.error {
     padding-top: 4px;
     width: 363px;
 }
+.page-user-bookmarks .wrappercontentLessonDetail {
+    margin-left: 0;
+    margin-top: 5px;
+}
 .ccLesson > span {
     height: 24px;
 }
