removed duplicate id attribute (video-control) on page lesson

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2257,11 +2257,11 @@ h3 {
 .usersessionsession .pipe{
     color: #FFF; 
 }
-#video-control {
-    margin: 31px auto 0px;
-    width: 940px;
-    float: left;
-}
+// #video-control {
+//     margin: 31px auto 0px;
+//     width: 940px;
+//     float: left;
+// }
 .videocontent {
     margin: auto;
     clear: both;
