--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1540,10 +1540,9 @@ ul.masonry{
 }
 #teachingsControlSection{
     clear: both;
-    margin: auto;
-    padding: 20px 0 16px 17px;
-    height:20px;
-    margin-top: 24px;
+    height: 20px;
+    margin: 0 auto;
+    padding: 35px 0 16px 17px;
 }
 #teachingsSectionTitle {
     color: #433A3A;
@@ -1567,7 +1566,7 @@ ul.masonry{
     margin-left: 10px;
 }
 #topicDDtext, #teachersDDtext, #teachersDD, #topicDD {
-    display: block;
+    display: inline-block;
     margin-bottom: 10px;
     color: #999999;
     font-size: 16px;
