--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1565,7 +1565,13 @@ ul.masonry{
 #topicDDtext{
     margin-left: 10px;
 }
-#topicDDtext, #teachersDDtext, #teachersDD, #topicDD {
+#topicDDtext, #teachersDDtext {
+    display: block;
+    margin-bottom: 10px;
+    color: #999999;
+    font-size: 16px;
+}
+#teachersDD, #topicDD {
     display: inline-block;
     margin-bottom: 10px;
     color: #999999;
