--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1565,14 +1565,8 @@ ul.masonry{
 #topicDDtext{
     margin-left: 10px;
 }
-#topicDDtext, #teachersDDtext {
+#topicDDtext, #teachersDDtext, #teachersDD, #topicDD {
     display: inline-block;
-    margin-bottom: 10px;
-    color: #999999;
-    font-size: 16px;
-}
-#teachersDD, #topicDD {
-    display: block;
     margin-bottom: 10px;
     color: #999999;
     font-size: 16px;
@@ -3241,11 +3235,11 @@ div.jp-audio{
 }
 #topicDDWrapper {
     float: left;
-    width: 187px  
+    width: 215px;  
 }
 #authorDDWrapper{
     float: left;
-    width: 177px   
+    width: 215px;   
 }
 #teachingsBarInnerWrapper{
     min-width: 940px;
