--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3233,14 +3233,17 @@ div.jp-audio{
 #teachingsSectionHeaderBar .lessonsCourse{
     display: block;
 }
-#topicDDWrapper {
-    float: left;
-    width: 215px;  
+#teachingsSectionHeaderBar{
+    #topicDDWrapper, #authorDDWrapper {
+        float: left;
+        width: 215px;  
+    }
+    #teachersDD, #topicDD{
+        width: 210px;
+    }
+
 }
-#authorDDWrapper{
-    float: left;
-    width: 215px;   
-}
+
 #teachingsBarInnerWrapper{
     min-width: 940px;
 }
