--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3240,6 +3240,9 @@ div.jp-audio{
     }
     #teachersDD, #topicDD{
         width: 210px;
+        select{
+            width: 100%; 
+        }
     }
 
 }
