--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3246,7 +3246,9 @@ div.jp-audio{
     }
 
 }
-
+#teachingsControlSection #teachingsControlSectionInnerWrapper {
+    width: auto !important;
+}
 #teachingsBarInnerWrapper{
     min-width: 940px;
 }
