--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -404,7 +404,9 @@ span.lessonsCourse,
 	    font-family: proxilight !important;
 	}
 
-	
+	.current-search-item-active-items .item-list ul li a .element-invisible {
+    	display: none;
+	}
 
 }
 .logged-in{
