--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -407,6 +407,11 @@ span.lessonsCourse,
 	.current-search-item-active-items .item-list ul li a .element-invisible {
     	display: none;
 	}
+	#searchFilterDetail .element-invisible {
+	    display: none;
+	    float: left;
+	    overflow: hidden;
+	}
 
 }
 .logged-in{
