--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5860,3 +5860,8 @@ span.downloadAudio {
 }
 
 
+#searchFilterDetail .element-invisible {
+    display: none;
+    float: left;
+    overflow: hidden;
+}
