--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -407,7 +407,10 @@ span.lessonsCourse,
 	.current-search-item-active-items .item-list ul li a .element-invisible {
     	display: none;
 	}
-	
+	#searchContentResult .element-invisible {
+    	display: none;
+	}
+
 
 }
 .logged-in{
