--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5865,3 +5865,6 @@ span.downloadAudio {
     float: left;
     overflow: hidden;
 }
+.node-type-live-events #video-control {
+    min-height: auto;
+}
