--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5868,3 +5868,6 @@ span.downloadAudio {
 .node-type-live-events #video-control {
     min-height: auto;
 }
+.node-type-live-events #wrapperVideoSection {
+    padding-bottom: 0;
+}
