--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -410,6 +410,9 @@ span.lessonsCourse,
 	#searchContentResult .element-invisible {
     	display: none;
 	}
+	#views-exposed-form-taxonomy-term-lesson-page .views-exposed-widget.views-submit-button {
+    	display: none;
+	}
 
 
 }
