updated css "add new icon for search page"

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3117,7 +3117,7 @@ div.jp-audio{
 }
 #courseDescription .bookmark label.checked {
     //background: rgba(0, 0, 0, 0) url("http://cdn1.kabbalah.com/university/icons/v.png") no-repeat scroll center 1px;
-    background-position: 0 -2335px; 
+    background-position: 1px -2332px; 
 }
 // #courseDescription .bookmark label + label{
 //     display: none; 
@@ -5420,7 +5420,8 @@ section.block.block-facetapi:first-child h2 {
     width: 18px;  
 }
 #searchFilterDetail label.element-invisible.checked{
-    background: url("http://cdn1.kabbalah.com/university/icons/v.png") no-repeat scroll center 1px;
+    //background: url("http://cdn1.kabbalah.com/university/icons/v.png") no-repeat scroll center 1px;
+    background-position: 1px -2332px; 
 }
 #block-current-search-standard > h2 {
     border-top: 1px dashed #b5b5b5;
