--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -54,7 +54,8 @@ a.jp-pause:after,
 a.jp-mute:after,
 a.jp-unmute:after,
 a.plusIcone,
-#courseDescription .bookmark label.checked{
+#courseDescription .bookmark label.checked,
+#searchFilterDetail label.element-invisible.checked{
     //background-image: url("/sites/all/themes/ukabbalah/images/all_eng_sm_new.png")!important;
     background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_sm_new.png")!important;
     background-repeat: no-repeat;
@@ -120,7 +121,8 @@ a.plusIcone,
 		a.jp-mute:after,
 		a.jp-unmute:after,
 		a.plusIcone,
-		#courseDescription .bookmark label.checked{
+		#courseDescription .bookmark label.checked,
+		#searchFilterDetail label.element-invisible.checked{
 			//background-image: url("/sites/all/themes/ukabbalah/images/all_eng_large_new.png")!important;
 			background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_large_new.png")!important; 
 	        background-size: 322px 2607px; // those size should be the half on the original size
