--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -55,7 +55,8 @@ a.jp-mute:after,
 a.jp-unmute:after,
 a.plusIcone,
 #courseDescription .bookmark label.checked,
-#searchFilterDetail label.element-invisible.checked{
+#searchFilterDetail label.element-invisible.checked,
+.current-search-item-active-items .item-list ul li a:after{
     //background-image: url("/sites/all/themes/ukabbalah/images/all_eng_sm_new.png")!important;
     background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_sm_new.png")!important;
     background-repeat: no-repeat;
@@ -122,7 +123,8 @@ a.plusIcone,
 		a.jp-unmute:after,
 		a.plusIcone,
 		#courseDescription .bookmark label.checked,
-		#searchFilterDetail label.element-invisible.checked{
+		#searchFilterDetail label.element-invisible.checked,
+		.current-search-item-active-items .item-list ul li a:after{
 			//background-image: url("/sites/all/themes/ukabbalah/images/all_eng_large_new.png")!important;
 			background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_large_new.png")!important; 
 	        background-size: 322px 2607px; // those size should be the half on the original size
