--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5497,7 +5497,8 @@ section.block.block-facetapi:first-child h2 {
 }
 #block-custom-search-blocks-2 input#edit-submit.form-submit {
     //background: transparent url("http://cdn1.kabbalah.com/university/icons/search-mag-glass.svg") no-repeat scroll right center;
-    background-position: 0 -1847px; 
+    background-position: 0 -1847px;
+    background-color: transparent;  
     border: medium none;
     color: transparent;
     cursor: pointer;
