--- a/sites/all/themes/ukabbalah/sass/_sprite.scss
+++ b/sites/all/themes/ukabbalah/sass/_sprite.scss
@@ -59,8 +59,8 @@ a.plusIcone,
 .current-search-item-active-items .item-list ul li a:after,
 #block-custom-search-blocks-2:after,
 #block-custom-search-blocks-2 input#edit-submit.form-submit{
-    //background-image: url("/sites/all/themes/ukabbalah/images/all_eng_sm_new.png")!important;
-    background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_sm_new.png")!important;
+    background-image: url("/sites/all/themes/ukabbalah/images/all_eng_sm_new.png")!important;
+    //background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_sm_new.png")!important;
     background-repeat: no-repeat;
 }
 
@@ -129,9 +129,9 @@ a.plusIcone,
 		.current-search-item-active-items .item-list ul li a:after,
 		#block-custom-search-blocks-2:after,
 		#block-custom-search-blocks-2 input#edit-submit.form-submit{
-			//background-image: url("/sites/all/themes/ukabbalah/images/all_eng_large_new.png")!important;
-			background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_large_new.png")!important; 
-	        background-size: 322px 2607px; // those size should be the half on the original size
+			background-image: url("/sites/all/themes/ukabbalah/images/all_eng_large_new.png")!important;
+			//background-image: url("http://cdn1.kabbalah.com/university/icons/all_eng_large_new.png")!important; 
+	        background-size: 322px 2879px; // those size should be the half on the original size
 		}
 		.newHeaderWrapperMobileMenuLogo{
 			// height: 24px;
